--- a/btvn.html
+++ b/btvn.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-sm-6 mb-4">
                 <div class="card">
                     <img src="https://i.pinimg.com/originals/6a/cd/07/6acd0780a4c693b2cf8da52b5c44b18e.gif" class="card-img-top" alt="Card Image">
                     <div class="card-body">
@@ -22,7 +22,34 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-sm-6 mb-4">
+                <div class="card">
+                    <img src="https://i.pinimg.com/originals/6a/cd/07/6acd0780a4c693b2cf8da52b5c44b18e.gif" class="card-img-top" alt="Card Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card 1</h5>
+                        <p class="card-text">This is the content of card 1.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+                <div class="card">
+                    <img src="https://i.pinimg.com/originals/6a/cd/07/6acd0780a4c693b2cf8da52b5c44b18e.gif" class="card-img-top" alt="Card Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card 1</h5>
+                        <p class="card-text">This is the content of card 1.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
+                <div class="card">
+                    <img src="https://i.pinimg.com/originals/6a/cd/07/6acd0780a4c693b2cf8da52b5c44b18e.gif" class="card-img-top" alt="Card Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card 1</h5>
+                        <p class="card-text">This is the content of card 1.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 mb-4">
                 <div class="card">
                     <img src="https://th.bing.com/th/id/R.37d760d25a939ac8742c74dd4812310d?rik=SrW8rZ8WSSJsRA&riu=http%3a%2f%2fimg2.joyreactor.com%2fpics%2fpost%2ffull%2fgif-shop-faxdoc-pixel-art-2517064.gif&ehk=FjBa0GFFE%2bAdIr%2bmZbKZC0r%2fKyqYU%2fmA3mUz%2bRfuCao%3d&risl=&pid=ImgRaw&r=0" class="card-img-top" alt="Card Image">
                     <div class="card-body">
@@ -31,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-sm-6 mb-4">
                 <div class="card">
                     <img src="https://th.bing.com/th/id/R.58a20a7660c83ebd166f98bec572ade0?rik=WrtcC01tUlb45g&pid=ImgRaw&r=0" class="card-img-top" alt="Card Image">
                     <div class="card-body">
